--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <label for="choice4">d</label>
             </div>
             <div>
-            <button id = "submit1">Submit</button>
+            <button id="submit1" type="button">Submit</button>
             </div>
         </form>
         <div id = custom-div></div>
