--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-    <title>10-28</title>
-</head>
-<body>
-    <h2>Welcome to 10-28!</h2>
+    <head>
+        <title>10-28</title>
+    </head>
 
-    <div id="radio-buttons">
-        <input type="radio" id="choice1" name="choice" value="a" />
-        <label for="choice1">a</label>
+    <body>
+        <input type ="text" id="myText" placeholder="Enter Text Here">
+        <button id="myBtn">submit</button>
+        <p id ="myParagraph"></p>
+        <br>
+        <input type="radio" name="rg" id="r1" value =7.5 checked><label for="r1">Small</label><br>
+        <input type="radio" name="rg" id="r2" value =10><label for="r2">Medium</label><br>
+        <input type="radio" name="rg" id="r3" value =12.5><label for="r3">Large</label><br>
+        <input type="radio" name="rg" id="r4" value =15><label for="r4">Extra Large</label><br>
+        
+        <input type="checkbox" name="cb" value="Extra Cheese">Extra Cheese
+        <input type="checkbox" name="cb" value="Mushrooms">Mushrooms
+        <input type="checkbox" name="cb" value="Bacon">Bacon
+        <input type="checkbox" name="cb" value="Double">Double
+        <br>
+        <input type="checkbox" name="cb" value="Add fries">Add fries
+        <input type="checkbox" name="cb" value="Add fountain drink">Add fountain drink
 
-        <input type="radio" id="choice2" name="choice" value="b" />
-        <label for="choice2">b</label>
+        <script type="text/javascript" src="script.js"></script>
 
-        <input type="radio" id="choice3" name="choice" value="c" />
-        <label for="choice3">c</label>
-
-        <input type="radio" id="choice4" name="choice" value="d" />
-        <label for="choice4">d</label>
-    </div>
-    <div>
-        <button id="submit1" type="button">Submit</button>
-    </div>
-    <div id="custom-div"></div>
-    <script type="text/javascript" src="script.js"></script>
-</body>
+    </body>
 </html>
